1_init/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: forward-auth
  name: forward-auth
  namespace: oauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-auth
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      containers:
      - name: traefik-forward-auth
        image: thomseddon/traefik-forward-auth:2
        imagePullPolicy: Always
        ports:
        - containerPort: 4181
---
apiVersion: v1
kind: Service
metadata:
  name: forward-auth
  namespace: oauth
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: forward-auth
  ports:
  - name: auth-http
    port: 4181
    targetPort: 4181
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress-route
  namespace: oauth
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`auth.${DDNS}`)
    kind: Rule
    services:
    - name: forward-auth
      port: 4181
